<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCDF67"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/samsung_galaxy_s10e"
        android:textColor="#000000"
        android:textSize="@dimen/textSize1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhonelistTextView"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneplus_6t"
        android:textColor="#000000"
        android:textSize="@dimen/textSize3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhonelistTextView"
        app:layout_constraintVertical_bias="0.258" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/honor_view_20"
        android:textColor="#000000"
        android:textSize="@dimen/textSize4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhonelistTextView"
        app:layout_constraintVertical_bias="0.366" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_pixel_3"
        android:textColor="#000000"
        android:textSize="@dimen/textSize5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhonelistTextView"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/PhonetextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iphone_xs_max"
        android:textColor="#000000"
        android:textSize="@dimen/textSize2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhonelistTextView"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/PhonelistTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_5_smart_phones_now"
        android:textColor="#F44336"
        android:textSize="@dimen/textSizeMain"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

</android.support.constraint.ConstraintLayout>